1) Restore multi-threaded FFT performance lost in 14.3.1. 2) Use lrint and loop-unrolling to improve performance of rate & dft_filter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ include(TestBigEndian)
 
 check_include_files("byteswap.h"         HAVE_BYTESWAP_H)
 check_include_files("inttypes.h"         HAVE_INTTYPES_H)
+check_include_files("fenv.h"             HAVE_FENV_H)
 check_include_files("glob.h"             HAVE_GLOB_H)
 check_include_files("io.h"               HAVE_IO_H)
 #check_include_files("ltdl.h"             HAVE_LTDL_H) # no plug-ins as yet
@@ -102,6 +103,9 @@ test_big_endian(WORDS_BIGENDIAN)
 optional(NEED_LIBM math.h m pow "")
 if(NEED_LIBM)
   set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} -lm)
+  optional(HAVE_LRINT math.h m lrint "")
+else(NEED_LIBM)
+  check_function_exists("lrint" HAVE_LRINT)
 endif(NEED_LIBM)
 optional(EXTERNAL_GSM gsm/gsm.h gsm gsm_create "")
 optional(EXTERNAL_LPC10 lpc10/lpc10.h lpc10 lpc10_create "")
