--- a/configure.ac
+++ b/configure.ac
@@ -138,10 +138,13 @@ AC_C_INLINE
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h unistd.h byteswap.h sys/stat.h sys/time.h sys/timeb.h sys/types.h sys/utsname.h termios.h glob.h)
+AC_CHECK_HEADERS(fcntl.h unistd.h byteswap.h sys/stat.h sys/time.h sys/timeb.h sys/types.h sys/utsname.h termios.h glob.h fenv.h)
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(strcasecmp strdup popen vsnprintf gettimeofday mkstemp fmemopen)
+AC_CHECK_FUNCS(strcasecmp strdup popen vsnprintf gettimeofday mkstemp fmemopen lrint)
+if test "$ac_cv_func_lrint" = no; then
+  AC_CHECK_LIB(m, lrint, AC_DEFINE(HAVE_LRINT, 1))
+fi
 
 dnl Check if math library is needed.
 AC_CHECK_FUNC(pow)
