--- a/debian/control
+++ b/debian/control
@@ -27,9 +27,12 @@ Build-Depends: cdbs,
                libvorbis-dev,
                libwavpack-dev
 Standards-Version: 3.9.1
+Vcs-Git: git://sox.git.sourceforge.net/gitroot/sox/sox
+Vcs-Browser: http://sox.git.sourceforge.net/git/gitweb.cgi?p=sox/sox
 
 Package: sox
 Architecture: any
+Section: sound
 Depends: libsox-fmt-alsa (= ${binary:Version}) [linux-any] | libsox-fmt-ao (= ${binary:Version}) | libsox-fmt-oss (= ${binary:Version}) | libsox-fmt-pulse (= ${binary:Version}),
          libsox-fmt-base (= ${binary:Version}),
          libsox3 (= ${binary:Version}),
@@ -53,6 +56,7 @@ Description: Swiss army knife of sound processing
 
 Package: libsox3
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Recommends: libsox-fmt-alsa [linux-any] | libsox-fmt-ao | libsox-fmt-oss | libsox-fmt-pulse,
             libsox-fmt-base
@@ -72,6 +76,7 @@ Description: SoX library of audio effects and processing
 
 Package: libsox-fmt-base
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Replaces: libsox-fmt-flac,
           libsox-fmt-gsm,
@@ -87,6 +92,7 @@ Description: Minimal set of SoX format libraries
 
 Package: libsox-fmt-alsa
 Architecture: linux-any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX alsa format I/O library
  SoX is the swiss army knife of sound processing.
@@ -97,6 +103,7 @@ Description: SoX alsa format I/O library
 
 Package: libsox-fmt-ao
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX Libao format I/O library
  SoX is the swiss army knife of sound processing.
@@ -105,18 +112,9 @@ Description: SoX Libao format I/O library
  .
  libao: http://xiph.org/ao
 
-Package: libsox-fmt-ffmpeg
-Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: SoX ffmpeg format library
- SoX is the swiss army knife of sound processing.
- .
- This package contains the SoX ffmpeg format library.
- .
- ffmpeg: http://ffmpeg.sourceforge.net
-
 Package: libsox-fmt-mp3
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX MP2 and MP3 format library
  SoX is the swiss army knife of sound processing.
@@ -130,6 +128,7 @@ Description: SoX MP2 and MP3 format library
 
 Package: libsox-fmt-oss
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX OSS format I/O library
  SoX is the swiss army knife of sound processing.
@@ -141,6 +140,7 @@ Description: SoX OSS format I/O library
 
 Package: libsox-fmt-pulse
 Architecture: any
+Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: SoX PulseAudio format I/O library
  SoX is the swiss army knife of sound processing.
@@ -151,10 +151,10 @@ Description: SoX PulseAudio format I/O library
 
 Package: libsox-fmt-all
 Architecture: any
+Section: libs
 Depends: libsox-fmt-alsa (= ${binary:Version}) [linux-any],
          libsox-fmt-ao (= ${binary:Version}),
          libsox-fmt-base (= ${binary:Version}),
-         libsox-fmt-ffmpeg (= ${binary:Version}),
          libsox-fmt-mp3 (= ${binary:Version}),
          libsox-fmt-oss (= ${binary:Version}),
          libsox-fmt-pulse (= ${binary:Version}),
