--- a/FEATURES.in
+++ b/FEATURES.in
@@ -21,6 +21,7 @@ The current release handles the following audio file formats:
 * Amiga MAUD files
 * AMR-WB & AMR-NB (with optional libamrwb & libamrnb libraries)
 * MP2/MP3 (with optional libmad, libtwolame and libmp3lame libraries)
+* Opus files (read only; with optional Opus libraries)
 (:cell:)
 * Ogg Vorbis files (with optional Ogg Vorbis libraries)
 * FLAC files (with optional libFLAC)
