Force Ubuntu into installing upstream's ChangeLog file.

--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,9 @@ override_dh_auto_clean:
 
 override_dh_auto_install: $(PREPROCESS_FILES:.in=)
 	dh_auto_install
+	# Force Ubuntu into installing upstream ChangeLog, it contains the
+	# list of past contributors
+	dh_installchangelogs ChangeLog
 
 %:
 	dh $@ --with autotools_dev
