New libsox example6: give explicit output attributes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,7 +35,7 @@ endif
 #########################
 
 bin_PROGRAMS = sox
-EXTRA_PROGRAMS = example0 example1 example2 example3 example4 example5 sox_sample_test
+EXTRA_PROGRAMS = example0 example1 example2 example3 example4 example5 example6 sox_sample_test
 lib_LTLIBRARIES = libsox.la
 include_HEADERS = sox.h
 sox_SOURCES = sox.c
@@ -49,6 +49,7 @@ example2_SOURCES = example2.c
 example3_SOURCES = example3.c
 example4_SOURCES = example4.c
 example5_SOURCES = example5.c
+example6_SOURCES = example6.c
 sox_sample_test_SOURCES = sox_sample_test.c sox_sample_test.h
 
 
@@ -138,12 +139,13 @@ example2_LDADD = ${sox_LDADD}
 example3_LDADD = ${sox_LDADD}
 example4_LDADD = ${sox_LDADD}
 example5_LDADD = ${sox_LDADD}
+example6_LDADD = ${sox_LDADD}
 
 EXTRA_DIST = monkey.wav optional-fmts.am \
 	     CMakeLists.txt soxconfig.h.cmake \
 	     tests.sh testall.sh tests.bat testall.bat test-comments
 
-all: sox$(EXEEXT) play$(EXEEXT) rec$(EXEEXT) soxi$(EXEEXT) sox_sample_test$(EXEEXT) example0$(EXEEXT) example1$(EXEEXT) example2$(EXEEXT) example3$(EXEEXT) example4$(EXEEXT) example5$(EXEEXT)
+all: sox$(EXEEXT) play$(EXEEXT) rec$(EXEEXT) soxi$(EXEEXT) sox_sample_test$(EXEEXT) example0$(EXEEXT) example1$(EXEEXT) example2$(EXEEXT) example3$(EXEEXT) example4$(EXEEXT) example5$(EXEEXT) example6$(EXEEXT)
 
 play$(EXEEXT) rec$(EXEEXT) soxi$(EXEEXT): sox$(EXEEXT)
 	if test "$(PLAYRECLINKS)" = "yes"; then	\
@@ -169,7 +171,7 @@ uninstall-hook:
 clean-local:
 	$(RM) play$(EXEEXT) rec$(EXEEXT) soxi$(EXEEXT)
 	$(RM) sox_sample_test$(EXEEXT)
-	$(RM) example0$(EXEEXT) example1$(EXEEXT) example2$(EXEEXT) example3$(EXEEXT) example4$(EXEEXT) example5$(EXEEXT)
+	$(RM) example0$(EXEEXT) example1$(EXEEXT) example2$(EXEEXT) example3$(EXEEXT) example4$(EXEEXT) example5$(EXEEXT) example6$(EXEEXT)
 
 distclean-local:
 
@@ -183,6 +185,7 @@ loc:
 	$(example3_SOURCES) \
 	$(example4_SOURCES) \
 	$(example5_SOURCES) \
+	$(example6_SOURCES) \
 	$(sox_sample_test_SOURCES) \
 	$(libsox_la_SOURCES)
 
