--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -162,6 +162,8 @@ add_executable(example4 example4.c)
 target_link_libraries(example4 lib${PROJECT_NAME} lpc10 ${optional_libs})
 add_executable(example5 example5.c)
 target_link_libraries(example5 lib${PROJECT_NAME} lpc10 ${optional_libs})
+add_executable(example6 example6.c)
+target_link_libraries(example6 lib${PROJECT_NAME} lpc10 ${optional_libs})
 find_program(LN ln)
 if (LN)
   add_custom_target(rec ALL ${LN} -sf sox rec DEPENDS sox)
