Switch to gcc's -fstack-protector
_FORTIFY_SOURCE=2 compiles fail with error on newer gccs if
-O is not enabled.  Instead of risking optimization related issues,
switching to gcc -fstack-protect (since 4.1 or 2007) or
-fstack-protector-strong (since 4.9 or 2014).

Redhat/Fedora ships with -fstack-protector for all RPM's and
is switching to -fstack-protector-strong this year so should be
well tested.

cmake could stand to be improved and enable -fstack-protector-strong
for newer compilers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ endmacro(optional4)
 project(sox C)
 
 if(CMAKE_COMPILER_IS_GNUCC)
-	add_definitions(-D_FORTIFY_SOURCE=2 -Wall -W -Wmissing-prototypes -Wstrict-prototypes -pedantic -Wno-format -Wno-long-long)
+	add_definitions(-fstack-protector -Wall -W -Wmissing-prototypes -Wstrict-prototypes -pedantic -Wno-format -Wno-long-long)
 endif(CMAKE_COMPILER_IS_GNUCC)
 
 include(TestBigEndian)
