Default to silent mode for automake
Prevents the compiler warnings from being lost in the noise.

Use 'make V=1' to get older verbose compile output.

--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ dnl Find target architecture
 AC_CANONICAL_TARGET
 
 AM_INIT_AUTOMAKE
+AM_SILENT_RULES([yes])
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AC_CONFIG_HEADERS([src/soxconfig.h])
