build: drop some compiler warning flags
These flags enable warnings that mostly serve to encourage poor
programming practices such as littering the code with casts which
often mask real problems.

--- a/configure.ac
+++ b/configure.ac
@@ -168,12 +168,8 @@ if test "$GCC" = "yes"; then
     gccver=`$CC -dumpversion`
     AC_MSG_RESULT($gccver)
 
-    CFLAGS="$CFLAGS -Wall -W -Wmissing-prototypes -Wstrict-prototypes -pedantic"
+    CFLAGS="$CFLAGS -Wall -Wmissing-prototypes -Wstrict-prototypes"
 
-    AS_VERSION_COMPARE([$gccver], [4.3],
-       [WARN_CFLAGS="-Wconversion"],
-       [WARN_CFLAGS="-Wtraditional-conversion"],
-       [WARN_CFLAGS="-Wtraditional-conversion"])
     dnl Define stricter policy on GNU/Linux, all symbols must be resolved
     case $target in
       *linux* | *solaris*)
