id3: make parsing available to all format handlers
Several formats beside mp3 can use id3 tags.  This makes it possible to
parse them from their respective handlers.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -111,7 +111,12 @@ libsox_la_SOURCES += raw-fmt.c s1-fmt.c s2-fmt.c s3-fmt.c \
   lu-fmt.c 8svx.c aiff-fmt.c aifc-fmt.c au.c avr.c cdr.c cvsd-fmt.c \
   dvms-fmt.c dat.c hcom.c htk.c maud.c prc.c sf.c smp.c \
   sounder.c soundtool.c sphere.c tx16w.c voc.c vox-fmt.c ima-fmt.c adpcm.c adpcm.h \
-  ima_rw.c ima_rw.h wav.c wve.c xa.c nulfile.c f4-fmt.c f8-fmt.c gsrt.c
+  ima_rw.c ima_rw.h wav.c wve.c xa.c nulfile.c f4-fmt.c f8-fmt.c gsrt.c \
+  id3.c id3.h
+
+if HAVE_ID3TAG
+  libsox_la_LIBADD += @ID3TAG_LIBS@
+endif
 
 pkglib_LTLIBRARIES =
 
