doc: fix doubled pdf output [bug #261]
The problem is when any PDF is created, the result is two duplicate
documents concatenated together.

Solution: Add the "--no-toc-relocation" parameter to pdfroff as a
work-around.

[ew: format + edit commit message, add references:
 https://bugs.debian.org/538326
 http://lists.gnu.org/archive/html/groff/2009-08/msg00028.html
 ]

Reviewed-by: Eric Wong <normalperson@yhbt.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,11 +39,11 @@ txt: $(DOCTXT)
 
 # Rule for making PDF man pages
 .1.pdf:
-	pdfroff -t -man -Tps $< > $@
+	pdfroff -t -man --no-toc-relocation -Tps $< > $@
 .3.pdf:
-	pdfroff -t -man -Tps $< > $@
+	pdfroff -t -man --no-toc-relocation -Tps $< > $@
 .7.pdf:
-	pdfroff -t -man -Tps $< > $@
+	pdfroff -t -man --no-toc-relocation -Tps $< > $@
 
 DOCPDF = sox.pdf soxi.pdf soxformat.pdf libsox.pdf
 pdf: $(DOCPDF)
