doc: fix out of tree text/pdf/html generation
The source dir is already included in $<.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,22 +28,22 @@ README: README.sh FEATURES.in
 
 # Rule for making text man pages.  Uses GNU nroff's -c so not portable.
 .1.txt:
-	tbl $(srcdir)/$< | nroff -man -c | sed "s/.//g" > $@
+	tbl $< | nroff -man -c | sed "s/.//g" > $@
 .3.txt:
-	tbl $(srcdir)/$< | nroff -man -c | sed "s/.//g" > $@
+	tbl $< | nroff -man -c | sed "s/.//g" > $@
 .7.txt:
-	tbl $(srcdir)/$< | nroff -man -c | sed "s/.//g" > $@
+	tbl $< | nroff -man -c | sed "s/.//g" > $@
 
 DOCTXT = sox.txt soxi.txt soxformat.txt libsox.txt README
 txt: $(DOCTXT)
 
 # Rule for making PDF man pages
 .1.pdf:
-	pdfroff -t -man -Tps $(srcdir)/$< > $@
+	pdfroff -t -man -Tps $< > $@
 .3.pdf:
-	pdfroff -t -man -Tps $(srcdir)/$< > $@
+	pdfroff -t -man -Tps $< > $@
 .7.pdf:
-	pdfroff -t -man -Tps $(srcdir)/$< > $@
+	pdfroff -t -man -Tps $< > $@
 
 DOCPDF = sox.pdf soxi.pdf soxformat.pdf libsox.pdf
 pdf: $(DOCPDF)
@@ -78,11 +78,11 @@ distclean-local:
 FIXHTML = sed 's,<head>,&<link rel="stylesheet" href="http://sox.sourceforge.net/pub/skins/sox/sox.css" type="text/css"></link>,' 
 
 .1.html:
-	groff -t -man -Thtml -P -Dsoxpng $(srcdir)/$< | $(FIXHTML) > $@
+	groff -t -man -Thtml -P -Dsoxpng $< | $(FIXHTML) > $@
 .3.html:
-	groff -t -man -Thtml -P -Dsoxpng $(srcdir)/$< | $(FIXHTML) > $@
+	groff -t -man -Thtml -P -Dsoxpng $< | $(FIXHTML) > $@
 .7.html:
-	groff -t -man -Thtml -P -Dsoxpng $(srcdir)/$< | $(FIXHTML) > $@
+	groff -t -man -Thtml -P -Dsoxpng $< | $(FIXHTML) > $@
 
 DOCHTML = sox.html soxi.html soxformat.html libsox.html
 html: $(DOCHTML)
