--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ RM = rm -f
 # prefix to ensure they are added to the distribution.
 dist_man_MANS = sox.1 soxi.1 soxformat.7 libsox.3
 EXTRA_DIST = sox.txt soxi.txt soxformat.txt libsox.txt \
-	     CMakeLists.txt sox.pc.in LICENSE.GPL LICENSE.LGPL \
+	     sox.pc.in LICENSE.GPL LICENSE.LGPL \
 	     cygbuild README.win32 README.osx scripts/batch-example.bat \
 	     README.sh FEATURES.in
 
