--- a/libgsm/Makefile.am
+++ b/libgsm/Makefile.am
@@ -29,7 +29,7 @@ AM_CFLAGS = $(SASR) $(MULHAC) $(FAST) $(LTP_CUT) $(WAV49)
 if EXTERNAL_GSM
 EXTRA_DIST = add.c code.c decode.c long_term.c lpc.c preprocess.c \
 	     rpe.c gsm_destroy.c gsm_decode.c gsm_encode.c gsm_create.c \
-	     gsm_option.c short_term.c table.c private.h gsm.h CMakeLists.txt \
+	     gsm_option.c short_term.c table.c private.h gsm.h \
 	     aliases.h
 else
 noinst_LTLIBRARIES = libgsm.la
@@ -37,5 +37,4 @@ noinst_HEADERS = gsm.h
 libgsm_la_SOURCES = add.c code.c decode.c long_term.c lpc.c preprocess.c \
 		rpe.c gsm_destroy.c gsm_decode.c gsm_encode.c gsm_create.c \
 		gsm_option.c short_term.c table.c private.h aliases.h
-EXTRA_DIST = CMakeLists.txt
 endif
