oss: remove check for machine/soundcard.h and libossaudio
Near as I can tell, no system actually has a machine/soundcard.h file.
The libossaudio library on NetBSD and OpenBSD is meant to emulate a
few ioctl() commands to facilitate porting of Linux applications.
As we have proper sndio support, this is of no use for SoX.

--- a/configure.ac
+++ b/configure.ac
@@ -609,10 +609,7 @@ AC_OPTIONAL_FORMAT(sndfile, SNDFILE, [using_sndfile=$tmp_using_sndfile])
 
 
 
-AC_OPTIONAL_FORMAT(oss, OSS, [AC_CHECK_HEADERS(sys/soundcard.h,,
-      [AC_CHECK_HEADERS(machine/soundcard.h,
-	  [AC_CHECK_LIB(ossaudio, _oss_ioctl, OSS_LIBS="$OSS_LIBS -lossaudio")],
-	  using_oss=no)])])
+AC_OPTIONAL_FORMAT(oss, OSS, [AC_CHECK_HEADERS(sys/soundcard.h,, uing_oss=no)])
 
 
 
