build: delete msvc project files
The msvc project files are for ancient versions and don't work any more.
Delete them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = lpc10 libgsm src
-DIST_SUBDIRS = lpc10 libgsm src msvc9 msvc10
+DIST_SUBDIRS = lpc10 libgsm src
 
 RM = rm -f
 
