--- a/configure.ac
+++ b/configure.ac
@@ -445,29 +445,32 @@ AC_OPTIONAL_FORMAT(flac, FLAC,
     [PKG_CHECK_MODULES([FLAC], [flac], [], [using_flac=no])])
 
 
-dnl When enable_dl_amrbw, do not let add libraries to be linked in
-dnl since they will be dlopen()'ed instead.
-ac_sox_save_AMRWB_LIBS="$AMRWB_LIBS"
 tmp_using_amrwb=no
 AC_CHECK_HEADERS(opencore-amrwb/dec_if.h,
     [AC_CHECK_LIB(opencore-amrwb, D_IF_init,
-        [AMRWB_LIBS="$AMRWB_LIBS -lopencore-amrwb"; tmp_using_amrwb=$opt_default])])
+        [OPENCORE_AMRWB_LIBS="$OPENCORE_AMRWB_LIBS -lopencore-amrwb"; tmp_using_amrwb=$opt_default])])
 AC_CHECK_HEADERS(vo-amrwbenc/enc_if.h,
     [AC_CHECK_LIB(vo-amrwbenc, E_IF_init,
-		    AMRWB_LIBS="$AMRWB_LIBS -lvo-amrwbenc"; tmp_using_amrwb=$opt_default)])
-AC_ARG_ENABLE(dl_amrwb,
-	      AS_HELP_STRING([--enable-dl-amrwb], 
-			     [Dlopen amrbw instead of linking in.]),
-			     enable_dl_amrwb=$enableval, enable_dl_amrwb=no)
-if test "x$using_libltdl" = "xyes" -a "x$enable_dl_amrwb" = "xyes"; then
-  AC_DEFINE(DL_AMRWB, 1, [Define to dlopen() amrwb.]) 
-  dnl When enable_dl_amrwb, do not let SOX_PATH_AMRWB add libraries
-  dnl to be linked in (since they will be dlopen()'ed instead).
-  AMRWB_LIBS="$ac_sox_save_AMRWB_LIBS"
-  dnl Force to using regardless if headers or libraries were found.
-  tmp_using_amrwb=yes
+        [VO_AMRWBENC_LIBS="$VO_AMRWBENC_LIBS -lvo-amrwbenc"; tmp_using_amrwb=$opt_default])])
+AC_ARG_ENABLE(dl_opencore_amrwb,
+	      AS_HELP_STRING([--enable-dl-opencore-amrwb],
+			     [Dlopen opencore-amrbw instead of linking in.]))
+AC_ARG_ENABLE(dl_vo_amrwbenc,
+	      AS_HELP_STRING([--enable-dl-vo-amrwbenc],
+			     [Dlopen vo-amrbwenc instead of linking in.]))
+if test "$using_libltdl" != "yes"; then
+  enable_dl_opencore_amrwb=no
+  enable_dl_vo_amrwbenc=no
+fi
+if test "$enable_dl_opencore_amrwb" = "yes"; then
+  AC_DEFINE(DL_OPENCORE_AMRWB, 1, [Define to dlopen() opencore-amrwb.])
 else
-  enable_dl_amrwb="no"
+  AMRWB_LIBS="$AMRWB_LIBS $OPENCORE_AMRWB_LIBS"
+fi
+if test "$enable_dl_vo_amrwbenc" = "yes"; then
+  AC_DEFINE(DL_VO_AMRWBENC, 1, [Define to dlopen() vo-amrwbenc.])
+else
+  AMRWB_LIBS="$AMRWB_LIBS $VO_AMRWBENC_LIBS"
 fi
 AC_OPTIONAL_FORMAT(amrwb, AMRWB, [using_amrwb=$tmp_using_amrwb])
 
@@ -479,19 +482,18 @@ AC_CHECK_HEADERS(opencore-amrnb/interf_dec.h,
 		 [AC_CHECK_LIB(opencore-amrnb, Decoder_Interface_init, 
 		  AMRNB_LIBS="$AMRNB_LIBS -lopencore-amrnb", tmp_using_amrnb=no)],
 		  [tmp_using_amrnb=no])
-AC_ARG_ENABLE(dl_amrnb,
-	      AS_HELP_STRING([--enable-dl-amrnb], 
-			     [Dlopen amrnb instead of linking in.]),
-			     enable_dl_amrnb=$enableval, enable_dl_amrnb=no)
-if test "x$using_libltdl" = "xyes" -a "x$enable_dl_amrnb" = "xyes"; then
-  AC_DEFINE(DL_AMRNB, 1, [Define to dlopen() amrnb.]) 
+AC_ARG_ENABLE(dl_opencore_amrnb,
+	      AS_HELP_STRING([--enable-dl-opencore-amrnb],
+			     [Dlopen opencore-amrnb instead of linking in.]))
+if test "$using_libltdl" = "yes" -a "$enable_dl_opencore_amrnb" = "yes"; then
+  AC_DEFINE(DL_OPENCORE_AMRNB, 1, [Define to dlopen() opencore-amrnb.])
   dnl When enable_dl_amrnb, do not let SOX_PATH_AMRNB add libraries
   dnl to be linked in (since they will be dlopen()'ed instead).
   AMRNB_LIBS="$ac_sox_save_AMRNB_LIBS"
   dnl Force to using regardless if headers or libraries were found.
   tmp_using_amrnb=yes
 else
-  enable_dl_amrnb="no"
+  enable_dl_opencore_amrnb="no"
 fi
 AC_OPTIONAL_FORMAT(amrnb, AMRNB, [using_amrnb=$tmp_using_amrnb])
 
@@ -638,11 +640,12 @@ echo
 echo "OPTIONAL FILE FORMATS"
 echo "amrnb......................$using_amrnb"
 if test "x$using_amrnb" = "xyes"; then
-echo " dlopen amrnb..............$enable_dl_amrnb"
+echo " dlopen amrnb..............${enable_dl_opencore_amrnb:-no}"
 fi
 echo "amrwb......................$using_amrwb"
 if test "x$using_amrwb" = "xyes"; then
-echo " dlopen amrwb..............$enable_dl_amrwb"
+echo " dlopen opencore-amrwb.....${enable_dl_opencore_amrwb:-no}"
+echo " dlopen vo-amrwbenc........${enable_dl_vo_amrwbenc:-no}"
 fi
 echo "flac.......................$using_flac"
 echo "gsm........................$using_gsm"
